--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,6 +144,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 25px;
+    max-width: 770px;
     min-width: 295px;
     margin: 50px 0;
 }
