--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ a {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 75px 0;
+    padding: 15vh 0;
 }
 
 .hero-content-left {
@@ -97,7 +97,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 10vh 0;
 }
 
 .info-content-header {
@@ -146,7 +146,7 @@ a {
     gap: 25px;
     max-width: 770px;
     min-width: 295px;
-    margin: 50px 0;
+    margin: 10vh 0;
 }
 
 .quote {
